--- a/app/calculator/templates/calculator/enter_numbers.html
+++ b/app/calculator/templates/calculator/enter_numbers.html
@@ -15,10 +15,9 @@
         <input type="text" id="num2" name="num2" required><br><br>
         <label for="operation">Operation:</label>
         <select id="operation" name="operation">
-            <option value="add">Addition</option>
-            <option value="subtract">Subtraction</option>
-            <option value="multiply">Multiplication</option>
-            <option value="divide">Division</option>
+            {% for option in allowed_operations %}
+                <option value="{{ option }}">{{ option }}</option>
+            {% endfor %}
         </select><br><br>
         <button type="submit">Calculate</button>
     </form>
